# tools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  test_finder.py  test_geometry_mapping.py  test_interfaces.py  test_solid_principles.py
!cutting_tools/: __init__.py  fun.py
!cutting_tools/data/: cutting_tools.db  tools.db
alembic/: env.py
alembic/versions/: 2e29c7d4a9fd_fix_autoincrement_in_geometry_tables.py  327142e45843_change_id_structure_in_geometry_tables.py  4084fb1fe5d9_rename_milling_cutters_to_geometry_frez.py  8175dd6166f4_rename_milling_cutters_to_geometry_frez.py  921156078d8d_create_geometry_turning_cutters_table.py  95f397763f57_remove_tool_type_and_standard_from_.py  a383d011ff66_remove_unique_constraint_from_marking.py  a541c29868da_create_tools_table.py  cd180695f18e_create_geometry_countersink_table.py  d70a51754d20_add_milling_cutter_columns.py  d96ab5cc4b2e_create_geometry_reamer_table.py  ea500c0b1417_change_milling_cutter_id_to_foreign_key.py
cutting_tools/: __init__.py  find.py  fun.py  insert.py  test.py
cutting_tools/data/: cutting_tools.db
database_backups/: 001.py  countersinking_cutters.txt  deployment_cutters.txt  drilling_cutters.csv  milling_cutters.csv  tools.csv  turning_cutters.txt
settings/: tools.env
tools/: 1.py  __init__.py  __main__.py  cli.py  logger_settings.py
tools/app/: __init__.py  config.py  formatters.py  search_strategy.py
tools/app/db/: __init__.py  check_connection.py  checks.py  clear_database.py  clear_table.py  column_mapping.py  create_database.py  export_table_to_csv.py  extract_cutters.py  extract_milling_cutters.py  init_database.py  load_countersinking_cutter.py  load_csv_data.py  load_deployment_cutter.py  load_drilling_cutter.py  load_milling_cutters.py  load_turning_cutters.py  query_builder.py  remove_database.py  remove_unique_constraint.py  restore_database.py  session_manager.py  show_database.py  show_tools.py  show_unique_values.py  status.py
tools/app/enumerations/: __init__.py  accuracy_class_standards.py  base.py  cutting_part_materials.py  cutting_part_types.py  load_types.py  marking_for_special_tool.py  milling_cutter_types.py  standard_types.py  tool_groups.py  tool_holder_types.py  tooth_types.py
tools/app/factories/: __init__.py  base.py  mapper.py  search_strategy.py  tool_schema.py  tool_schema_factory.py
tools/app/finders/: __init__.py  finder.py  solid_tool_finder.py
tools/app/interfaces/: __init__.py  enumeration.py  factory.py  formatter.py  mapper.py  mapper_manager.py  query_builder.py  search_strategy.py  session_manager.py  tool_finder.py
tools/app/mappers/: __init__.py  base_mapper.py  broaching_mapper.py  countersinking_mapper.py  custom_countersinking_mapper.py  drilling_mapper.py  milling_mapper.py  reamer_mapper.py  turning_mapper.py
tools/app/models/: __init__.py  geometry_countersinking_cutter.py  geometry_deployment_cutter.py  geometry_drilling_cutter.py  geometry_milling_cutters.py  geometry_turning_cutters.py  milling_cutters.py  tools.py
tools/app/schemas/: __init__.py  axial_cutting_tool.py  blade_material.py  broaching_cutter.py  countersinking_cutter.py  deployment_cutter.py  drilling_cutter.py  milling_cutter.py  prismatic_cutting_tool.py  sizes.py  (+2 more)
tools/data/: __init__.py
tools/scr/: fun.py
tools_old/: __init__.py  __main__.py  logger_settings.py
tools_old/data/: __init__.py  tools.db
tools_old/scr/: fun.py
(+21 files in other folders)
