[tool.poetry]
name = "tools"
version = "0.2.20"
description = ""
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = "^3.9"
service = {path = "I:/Программирование/Pro0.5-service_for_my_projects/dist/service-0.1.32.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
