[tool.poetry]
name = "tools"
version = "0.2.23"
description = ""
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = "^3.9"
service-for-my-projects = {git = "https://github.com/sad-engineer/service_for_my_projects.git"}
pydantic = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
