[metadata]
name = cutting_tools
version = 0.0.1
author = A.N.Korenyuk
author_email = korenyuk.a.n@mail.ru
description = Working with the database by tool
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: LICENSE.txt :: LICENSE.txt
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src