[metadata]
name = tools
version = 0.2.25
author = Andrey Nikolaevich Korenyuk
author_email = korenyuk.a.n@mail.ru
description = Модуль для работы с базой данных инструментов
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = tools
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.0.3
    dependency-injector>=4.41.0
    pydantic>=2.11.3
    service-for-my-projects
include_package_data = True
zip_safe = False

[options.packages.find]
where = tools
include =
    tools
    tools.*

